tests/nad_test_8/resources.yaml
# resource : https://github.com/openshift/multus-networkpolicy/blob/278ec20e795c3a590500e789716be7fcc4d7107b/e2e/tests/protocol-only-ports.yml
---
apiVersion: "k8s.cni.cncf.io/v1"
kind: NetworkAttachmentDefinition
metadata:
  namespace: default
  name: macvlan1-simple
spec: 
  config: '{
            "cniVersion": "0.3.1",
            "name": "macvlan1-simple",
            "plugins": [
                {
                    "type": "macvlan",
                    "mode": "bridge",
                    "ipam":{
                      "type":"host-local",
                      "subnet":"2.2.6.0/24",
                      "rangeStart":"2.2.6.8",
                      "rangeEnd":"2.2.6.67"
                    }
                }]
        }'
---
# namespace for MultiNetworkPolicy 
apiVersion: v1
kind: Namespace
metadata:
    name: test-protocol-only-ports
---
# Pods
apiVersion: v1
kind: Pod
metadata:
  name: pod-a
  namespace: test-protocol-only-ports
  annotations:
    k8s.v1.cni.cncf.io/networks: default/macvlan1-simple
  labels:
    app: test-protocol-only-ports
    name: pod-a
spec:
  containers:
  - name: netcat-tcp
    image: ghcr.io/k8snetworkplumbingwg/multi-networkpolicy-iptables:e2e-test
    command: ["nc", "-klp", "5555"]
    securityContext:
      privileged: true
  - name: netcat-udp
    image: ghcr.io/k8snetworkplumbingwg/multi-networkpolicy-iptables:e2e-test
    command: ["nc", "-vv", "--udp", "--keep-open", "--sh-exec", "/bin/cat >&2", "--listen", "6666"]
    securityContext:
      privileged: true
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-b
  namespace: test-protocol-only-ports
  annotations:
    k8s.v1.cni.cncf.io/networks: default/macvlan1-simple
  labels:
    app: test-protocol-only-ports
    name: pod-b
spec:
  containers:
  - name: netcat-tcp
    image: ghcr.io/k8snetworkplumbingwg/multi-networkpolicy-iptables:e2e-test
    command: ["nc", "-klp", "5555"]
    securityContext:
      privileged: true
  - name: netcat-udp
    image: ghcr.io/k8snetworkplumbingwg/multi-networkpolicy-iptables:e2e-test
    command: ["nc", "-vv", "--udp", "--keep-open", "--sh-exec", "/bin/cat >&2", "--listen", "6666"]
    securityContext:
      privileged: true
---
# MultiNetworkPolicies
apiVersion: k8s.cni.cncf.io/v1beta1
kind: MultiNetworkPolicy
metadata:
  name: test-multinetwork-policy-simple-1
  namespace: test-protocol-only-ports
  annotations:
    k8s.v1.cni.cncf.io/policy-for: default/macvlan1-simple
spec:
  podSelector:
    matchLabels:
      name: pod-a
  policyTypes:
  - Egress
  - Ingress
  egress:
  - ports:
    - protocol: TCP
  ingress:
  - ports:
    - protocol: UDP
